<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_city_name"
    app:helperText="@string/helper_edit_text"
        app:startIconDrawable="@drawable/ic_baseline_wb_sunny_24"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:counterEnabled="true"
    app:counterMaxLength="30"
    app:endIconMode="clear_text"
    app:helperTextTextColor="@color/purple_200"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/textInputEditTextCity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxLength="30"
   />


</com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_get_weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>